# raytracer-haskell

./: .gitignore  LICENSE  Project.cabal  README  Raytracer.cabal
doc/: links.txt  problems-3-3-10.txt
doc/report_2010-02-24/: report.txt
src/: Config.hs  Postlude.hs  Project.hs  Setup.hs  Test.hs
src/Base/: BoundingSphere.hs  CLI.hs  Light.hs  Miscellaneous.hs  Shader.hs  Shape.hs
src/Base/Shape/: Cone.hs  Cube.hs  Cylinder.hs  GMLShape.hs  GMLShape.hs-boot  Plane.hs  Sphere.hs
src/Data/: Angle.hs  Colour.hs  Matrix.hs  Radians.hs  Range.hs  Texture.hs  Transformation.hs  Vector.hs
src/GML/: AST.hs  Evaluate.hs  Operators.hs  Parser.hs  RunGML.hs  ToRenderObject.hs
src/GML/Parser/: ApplicativeParsec.hs
src/Input/GML/: AST.hs  ApplicativeParsec.hs  Evaluate.hs  Evaluator.hs  Operators.hs  Parser.hs  Render.hs  RunGML.hs  Scene.hs  Shaders.hs  ToRenderObject.hs  ToThijsObject.hs
src/Input/GML/Parser/: ApplicativeParsec.hs
src/Output/: Colour.hs  Output.hs  PPM.hs
src/Renderer/: CSG.hs  ConstructiveSolidGeometry.hs  Datatypes.hs  IlluminationModel.hs  IntersectionInfo.hs  Intersections.hs  Intersections2.hs  Intervals.hs  Lighting.hs  Lightning.hs  Normals.hs  Primitives.hs  Renderer.hs  Scene.hs  Shaders.hs  UV.hs
src/Shared/: Colour.hs  Matrix.hs  RenderBase.hs  Vector.hs
src/Tests/: Template.Module
src/Tests/Data/: Matrix.hs  Range.hs  Vector.hs
src/Tests/GML/: AST.hs  Parser.hs
src/Tests/Input/GML/: AST.hs  Parser.hs
src/Tests/Output/: PPM.hs
src/Tests/Renderer/: Datatypes.hs  Intersections.hs
tests/Input/gml/: adrenalin.gml  aspirin.gml  checked-cube.gml  chess.gml  cone-fractal.gml  cone.gml  csg-plane.gml  cube.gml  cylinder.gml  dice.gml  ellipsoid.gml  fib.gml  fov.gml  fractal.gml  fractal2.gml  fractalMovie.gml  golf.gml  holes.gml  house.gml  intercones.gml  intercubes.gml  intercyl.gml  kal.gml  large.gml  pipe.gml  protein.gml  reflect.gml  rotate.gml  snowflake.gml  snowgoon.gml  sphere.gml  sphere.sh  spheres.gml  spheres2.gml  spotlight.gml  surface.ins  test-gmlshape.gml  testset.gml  three-cubes.gml  three-spheres.gml
tests/Input/gml/references/: checked-cube.gml  golf.gml  intercones.gml  intercubes.gml  intercyl.gml  test-cone.gml  test-csg.gml  test-cube.gml  test-plane.gml  test-sphere.gml  test-spotlight.gml  testall.gml
tests/Input/gml/ruud/: chess.gml
tests/Input/gml/textured/: cube.gml  cube.gml~  globe.gml  globe.gml~  globes.gml
tests/Input/standard/: fix.gml  simpleFuncs.gml  solveRoot.gml
www/: index.html
