Name:               RayTracer
Version:            1.0
Cabal-Version:      >= 1.2
License:            GPL
Author:             Alessandro Vermeulen, Bart Spaans, Bram Schuur, Ruud Koot, Thijs Alkemade
Synopsis:           Ray Tracer 
Description:        Ray Tracer
Build-Type:         Simple

Executable raytrace
  Main-Is:          Project.hs
  Build-Depends:    base >= 3 && < 5, haskell98, parsec == 2.1.0.1, QuickCheck >= 2.1.0.3, containers >= 0.2, mtl >= 1.1, filepath >= 1.1.0.2, parallel >= 2.2.0.1, deepseq >= 1.1.0.0, GlomeVec >= 0.1.2
  GHC-Options:      -O3 -Wall -auto-all -funbox-strict-fields -threaded
  Hs-Source-Dirs:   src/
