Name:               RayTracer
Version:            1.0
Cabal-Version:      >= 1.2
License:            GPL
Author:             Alessandro Vermeulen
                    Bart Spaans
                    Bram Schuur
                    Ruud Koot
                    Thijs Alkemade
Synopsis:           Ray Tracer 
Description:        Ray Tracer
Build-Type:         Simple
Data-files:         README

Executable raytrace
  Main-Is:          Main.hs
  Build-Depends:    base       >= 3 && < 5
                  , haskell98
                  , parsec     == 2.1.0.1
                  , QuickCheck >= 2.1.0.3
                  , containers >= 0.2
                  , mtl        >= 1.1
                  , filepath   >= 1.1.0.2
                  , parallel   >= 2.2.0.1
                  , GlomeVec   >= 0.1.2
                  , stb-image
                  , bitmap
                  , array      >= 0.2.0.0
                  , bytestring >= 0.9.1
                  , split      >= 0.1
                  , cmdargs    == 0.1
  GHC-Options:      -O2 -Wall -funbox-strict-fields -threaded
  Other-Modules:    Base.CLI Base.Light Base.Shader Base.Shape
                    Base.Shape.Cone Base.Shape.Cube Base.Shape.Cylinder 
                    Base.Shape.GMLShape Base.Shape.Plane 
                    Base.Shape.Sphere	
                    Data.Angle Data.Colour Data.Range Data.Texture
                    Data.Transformation Data.Vector
                    GML.AST GML.Evaluate GML.Operators 
                    GML.Parser GML.RunGML GML.ToRenderObject
                    GML.Parser.ApplicativeParsec  Output.PPM
                    Renderer.ConstructiveSolidGeometry
                    Renderer.IlluminationModel Renderer.IntersectionInfo
                    Renderer.Intersections Renderer.Renderer 
                    Renderer.Scene Postlude
                    Tests.Data.Range Tests.Data.Transformation Tests.Data.Vector
                    Tests.GML.AST Tests.GML.Parser
                    Tests.Renderer.Datatypes Tests.Renderer.Intersections
  Hs-Source-Dirs:   src/
